# face_voice

./: .env  .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cartesia_tts.py  lipsync.py  server.py  tts.py
docs/voice/ifly-hyper-tts/: _meta.json
reports/: business_analysis.md
scripts/: gen_eyes.py  gen_mouths.py
static/: index.html
static/mouths/: README.md
